// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Attachments Attachments base demo works fine 1`] = `
<base>
  <wx-view
    class="chat-example"
  >
    <wx-view
      class="chat-example-block"
    >
      <t-attachments
        items="{{
          Array [
            Object {
              "fileType": "image",
              "name": "sample-image.jpg",
              "size": 1024,
              "status": "success",
              "url": "https://tdesign.gtimg.com/site/avatar.jpg",
            },
          ]
        }}"
        bind:add="onAdd"
        bind:fileClick="onFileClick"
        bind:remove="onRemove"
      />
    </wx-view>
  </wx-view>
</base>
`;

exports[`Attachments Attachments file demo works fine 1`] = `
<file>
  <wx-view
    class="chat-example"
  >
    <wx-view
      class="chat-example-block"
    >
      <t-attachments
        items="{{
          Array [
            Object {
              "fileType": "doc",
              "name": "word-file.doc",
              "size": 222859,
              "status": "success",
              "url": "https://example.com/word-file.doc",
            },
          ]
        }}"
        bind:add="onAdd"
        bind:fileClick="onFileClick"
        bind:remove="onRemove"
      />
    </wx-view>
    <wx-view
      class="chat-example-block"
    >
      <t-attachments
        items="{{
          Array [
            Object {
              "fileType": "excel",
              "name": "excel-file.xlsx",
              "size": 222859,
              "status": "success",
              "url": "https://example.com/excel-file.xlsx",
            },
          ]
        }}"
        bind:add="onAdd"
        bind:fileClick="onFileClick"
        bind:remove="onRemove"
      />
    </wx-view>
    <wx-view
      class="chat-example-block"
    >
      <t-attachments
        items="{{
          Array [
            Object {
              "fileType": "pdf",
              "name": "pdf-file.pdf",
              "size": 222859,
              "status": "success",
              "url": "https://example.com/pdf-file.pdf",
            },
          ]
        }}"
        bind:add="onAdd"
        bind:fileClick="onFileClick"
        bind:remove="onRemove"
      />
    </wx-view>
    <wx-view
      class="chat-example-block"
    >
      <t-attachments
        items="{{
          Array [
            Object {
              "fileType": "ppt",
              "name": "ppt-file.pptx",
              "size": 222859,
              "status": "success",
              "url": "https://example.com/ppt-file.pptx",
            },
          ]
        }}"
        bind:add="onAdd"
        bind:fileClick="onFileClick"
        bind:remove="onRemove"
      />
    </wx-view>
    <wx-view
      class="chat-example-block"
    >
      <t-attachments
        items="{{
          Array [
            Object {
              "fileType": "video",
              "name": "video-file.mp4",
              "size": 222859,
              "status": "success",
              "url": "https://example.com/video-file.mp4",
            },
          ]
        }}"
        bind:add="onAdd"
        bind:fileClick="onFileClick"
        bind:remove="onRemove"
      />
    </wx-view>
    <wx-view
      class="chat-example-block"
    >
      <t-attachments
        items="{{
          Array [
            Object {
              "fileType": "file",
              "name": "file",
              "size": 222859,
              "status": "success",
              "url": "https://example.com/audio-file.mp3",
            },
          ]
        }}"
        bind:add="onAdd"
        bind:fileClick="onFileClick"
        bind:remove="onRemove"
      />
    </wx-view>
  </wx-view>
</file>
`;

exports[`Attachments Attachments file-loading demo works fine 1`] = `
<file-loading>
  <wx-view
    class="chat-example"
  >
    <wx-view
      class="chat-example-block"
    >
      <t-attachments
        items="{{
          Array [
            Object {
              "fileType": "doc",
              "name": "word-file.doc",
              "size": 222859,
              "status": "pending",
              "url": "https://example.com/word-file.doc",
            },
          ]
        }}"
        bind:add="onAdd"
        bind:fileClick="onFileClick"
        bind:remove="onRemove"
      />
    </wx-view>
  </wx-view>
</file-loading>
`;

exports[`Attachments Attachments image-loading demo works fine 1`] = `
<image-loading>
  <wx-view
    class="chat-example"
  >
    <wx-view
      class="chat-example-block"
    >
      <t-attachments
        items="{{
          Array [
            Object {
              "fileType": "image",
              "name": "sample-image.jpg",
              "size": 1024,
              "status": "pending",
              "url": "https://tdesign.gtimg.com/site/avatar.jpg",
            },
          ]
        }}"
        bind:add="onAdd"
        bind:fileClick="onFileClick"
        bind:remove="onRemove"
      />
    </wx-view>
  </wx-view>
</image-loading>
`;
